# auction

./: CMakeLists.txt  README.md  config.js  package.xml
include/: GoalManager.h  Group.h  InfoReporter.h  MathUtil.h  Message.h  MessageSystem.h  Monitor.h  NetProfile.h  Point2D.h  RcSocket.h  RobotManager.h  RobotStatus.h  SafeQueue.h  Task.h  TaskStatus.h  WebService.h  vfh_node.h
launch/: 1_robot_vfh.launch  1_robots.launch  2_robots.launch  2_robots_vfh.launch  3_robots.launch  3_robots_vfh.launch  4_robots_vfh.launch  5_robots_vfh.launch  6_robots_vfh.launch  frames.gv  launch_1_robot.launch  launch_1_robot_vfh.launch  launch_generator.py  launch_generator_vfh.py  launch_n_robots.launch  mapa.pgm  mapa.yaml  move_base_slam.launch  slam_gmapping.launch
launch/config/: base_local_planner_params.yaml  config.rviz  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  slam_rviz.rviz
launch/world_files/: 1_robots.world  2_robots.world  3_robots.world  4_robots.world  5_robots.world  6_robots.world  base.world  mundo.world  objects.inc  pioneer.inc  pioner.txt
src/: Auction.cpp  AuctionMonitor.cpp  GoalManager.cpp  GoalSender.cpp  MainTest.cpp  MessageSystem.cpp  Monitor.cpp  MonitorNode.cpp  RcSocket.cpp  RobotManager.cpp  RobotNode.cpp  WebService.cpp  cpp_sandbox.cpp  main.cpp  message_sender.cpp  vfh_algorithm.cc  vfh_node.cpp
web/html/: index.html  simulation.html  test.html
web/scripts/: button.js  query_info.js  simulation.js  test.js
web/threejs_test/html/: index.html
web/threejs_test/js/: test.js
